# markdown-file-reader

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  RELEASE_NOTES.md  TESTING.md  create-icon.ps1  index.html  package-lock.json  package.json  vitest.config.ts
spec/markdown_editor_split_mode/: code.html
spec/markdown_reader_light_mode/: code.html
spec/markdown_reader_true_dark_mode/: code.html
src/: app.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/services/: FileService.ts  MarkdownService.ts  ThemeService.ts
tests/: README.md  setup.ts
tests/fixtures/: sample.md
tests/unit/: FileService.test.ts  MarkdownService.test.ts  SearchFeature.test.ts  ThemeService.test.ts
