[package]
name = "markdown-file-reader"
version = "0.2.0"
description = "A Markdown file reader built with Tauri"
authors = ["you"]
edition = "2021"

[lib]
name = "markdown_file_reader_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-opener = "2"
